# OpenXR-Simulator-WXR

./: .gitignore  CMakeLists.txt  README.md
mcp-server/: README.md  claude_mcp_config.json  openxr_simulator_mcp.py  pyproject.toml
src/: WinXrApiUDP.cpp  WinXrApiUDP.h  mcp_integration.h  runtime.cpp  ui_enhancements.h
