[project]
name = "openxr-simulator-mcp"
version = "1.0.0"
description = "MCP server for OpenXR Simulator - provides screenshot capture and diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
openxr-simulator-mcp = "openxr_simulator_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
